Use Xerces URI class.
git-svn-id: https://svn.eu.apache.org/repos/asf/xalan/java/trunk@333133 13f79535-47bb-0310-9956-ffa450edef68